[package]
name = "veg"
version = "0.5.2"
edition = "2021"
description = "Flexible tables"
repository = "https://github.com/qtfkwk/veg"
license = "MIT"

[dependencies]
anyhow = "1.0.90"
colored = { version = "2.1.0", optional = true }
strip-ansi-escapes = { version = "0.2.0" }
unicode-segmentation = { version = "1.12.0" }

[features]
colored = ["dep:colored"]

[package.metadata.docs.rs]
features = ["colored"]
