[package]
name = "veg"
version = "0.5.6"
edition = "2021"
description = "Flexible tables"
repository = "https://github.com/qtfkwk/veg"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
colored = { version = "3.0.0", optional = true }
strip-ansi-escapes = { version = "0.2.1" }
unicode-segmentation = { version = "1.12.0" }

[features]
colored = ["dep:colored"]

[package.metadata.docs.rs]
features = ["colored"]
